# onyx

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
docs/: MIGRATION_PLAN.md  MVP.md  ROPE.md  SHELL.md  TASKS.md  UI_ARCHITECTURE.md  USER_JOURNEY.md  VISION.md
docs/dependencies/: WINIT.MD
docs/plans/: 2026-02-23-milestone-1-rendering-foundation.md  2026-02-23-milestone-2-editor-core.md  2026-02-23-milestone-3-wysiwyg-layer.md  2026-02-23-milestone-4-vault-system.md  2026-02-23-milestone-5-workspace-shell.md  2026-02-23-milestone-6-terminal-pane.md  2026-02-23-mvp-design.md  2026-02-24-milestone-1-text-on-screen.md  2026-02-24-mvp-playable-editor.md  editor-editing-capabilities.md  maximize-window-on-vault-open.md  unified-buttons-zed-mono-font-config.md  zed-inspired-file-tree-ui-redesign.md
src/: App.tsx  action.rs  app.rs  buffer.rs  editor.rs  editor_view.rs  error.rs  file_tree.rs  gpu.rs  index.css  keybindings.linux.json  keybindings.mac.json  main.rs  main.tsx  markdown.rs  render.rs  terminal.rs  text.rs  theme.test.ts  theme.ts  ui.rs  vault.rs  vim.rs  welcome.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  file_tree.rs  global_config.rs  main.rs  tag_index.rs  vault.rs  vault_config.rs
src/components/: AppLayout.test.tsx  AppLayout.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ErrorBoundary.tsx  FilePicker.test.tsx  (+13 more)
(+33 files in other folders)
