[package]
name = "onyx"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
wgpu = "27"
vello = "0.7"
cosmic-text = "0.12"
taffy = "0.5"
ropey = "1.6"
pulldown-cmark = "0.11"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rfd = "0.14"
dirs-next = "2"
portable-pty = "0.8"
vte = "0.13"
crossbeam-channel = "0.5"
arboard = "3"

[dev-dependencies]
tempfile = "3"

[profile.dev]
opt-level = 1
