[package]
name = "onyx"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
wgpu = "27"
vello = "0.7"
cosmic-text = "0.12"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rfd = "0.14"
dirs-next = "2"

[dev-dependencies]
tempfile = "3"

[profile.dev]
opt-level = 1
